--- a/rainbow.html
+++ b/rainbow.html
@@ -14,7 +14,7 @@
 	</head>
 
 	<body>
-		<h1>Rainbow Miracles</h1>
+		<h1>Mesmerizing colors</h1>
 		<button id="but"><h3>Touch here!</h3></button>
 		<script>
 			const btn=document.getElementById('but');
